Kscript 4.2 (#381)
*Breaking changes*

* Renamed environment variable from 'KSCRIPT_DIR' to 'KSCRIPT_DIRECTORY'

*Enhancements*

* New GitHub organization: http://github.com/kscripting[kscripting]
* More work on Windows shell compatibility; most functionality works on Windows as on systems with bash
* Change the name of the kscript package to io.github.kscripting:kscript
* Final execution of the script is handled by kscript, not by bash (reduces dependency on bash)
* Separate library for shell execution kscripting/shell
* Ability to provide local artifacts path through *KSCRIPT_DIRECTORY_ARTIFACTS* or configuration file property:
 *scripting.directory.artifacts* (thanks to https://github.com/vsajip[Vsajip] for initial implementation)
* kscript jar is released to Maven Central: *io.github.kscripting:kscript:4.2.0*
* Change the way of checking the latest kscript version (simplifies releases)
* Deprecate old annotations in the kscript-annotations library
* Improved implementation: VersionChecker, ConfigBuilder etc.
* Updated Gradle and dependencies
* Deprecated @file:Include in favour of @file:Import as a preparation of switch to Kotlin Scripting
* Replaced DocOpt with Apache CLI
* Changed the way of creating distribution package - now it is handled by Gradle
* Version of kscript is set by Gradle (generated BuildConfig class)
* Improved DependencyResolver: aar archives are also included in the classpath
* When creating an IntelliJ project, Gradle and Idea is no more required

*Bugfixes*

* Fixed exit code on Windows

*Other*
* Deprecation of "Include" in favor of "Import"
* Infrastructure for publishing kscript
* Updated kscript-annotations
* Changed a way of building distribution of kscript
* KScript version is derived from Gradle build file (BuildConfig)
* Handle snapshot versions in VersionChecker
* Updated Github actions
* Updated start-up scripts
* Additional tests, which now work on Windows.
* Updated Kotlin version
* Fixed